--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
     font-family: sans-serif;
   }
 
-  /* HUD and Game Area */
   #hud {
     display: flex;
     gap: 30px;
@@ -32,135 +31,48 @@
     overflow: hidden;
   }
 
-  #pacman, #ghost, .pellet {
+  #pacman, #ghost, .pellet, .alien {
     width: 40px;
     height: 40px;
     position: absolute;
     transition: transform 0.2s;
   }
 
-  #pacman {
-    background-color: yellow;
-    border-radius: 50%;
-    z-index: 2;
-  }
+  #pacman { background-color: yellow; border-radius: 50%; z-index: 2; }
+  #ghost { background-color: red; border-radius: 50%; z-index: 2; }
+  .pellet { background-color: white; border-radius: 50%; z-index: 1; }
+  .alien { background-color: green; border-radius: 50%; z-index: 2; }
 
-  #ghost {
-    background-color: red;
-    border-radius: 50%;
-    z-index: 2;
-  }
+  .controls { display: flex; flex-direction: column; align-items: center; margin-top: 15px; }
+  .row { display: flex; justify-content: center; }
+  .controls button { width: 60px; height: 60px; font-size: 24px; background: #333; color: white; border: none; border-radius: 10px; cursor: pointer; }
 
-  .pellet {
-    background-color: white;
-    border-radius: 50%;
-    z-index: 1;
-  }
-
-  /* Touch Controls */
-  .controls {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 15px;
-  }
-  .row {
-    display: flex;
-    justify-content: center;
-  }
-  .controls button {
-    width: 60px;
-    height: 60px;
-    font-size: 24px;
-    background: #333;
-    color: white;
-    border: none;
-    border-radius: 10px;
-    cursor: pointer;
-  }
-
-  /* Game Over and Pause Menu */
   #gameOver, #pauseMenu {
-    position: absolute;
-    top: 50%;
-    left: 50%;
+    position: absolute; top: 50%; left: 50%;
     transform: translate(-50%, -50%);
     background-color: rgba(0,0,0,0.85);
-    color: red;
-    font-size: 24px;
-    text-align: center;
-    padding: 20px;
-    border: 2px solid red;
-    border-radius: 10px;
-    display: none;
-    z-index: 10;
+    color: red; font-size: 24px; text-align: center;
+    padding: 20px; border: 2px solid red; border-radius: 10px;
+    display: none; z-index: 10;
   }
   #gameOver button, #pauseMenu button {
-    margin-top: 10px;
-    background: red;
-    color: white;
-    font-size: 18px;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
+    margin-top: 10px; background: red; color: white; font-size: 18px;
+    padding: 10px 20px; border: none; border-radius: 5px; cursor: pointer;
   }
 
-  /* Home, Map Select, Leaderboard */
-  #homeScreen, #mapSelectScreen, #leaderboardScreen {
-    text-align: center;
-    margin-top: 80px;
+  #homeScreen, #mapSelectScreen, #leaderboardScreen { text-align: center; margin-top: 80px; }
+  .logo { font-size: 60px; color: white; text-shadow:0 0 5px #00ffff,0 0 10px #00ffff,0 0 20px #0088ff; }
+  .tagline { font-size: 18px; margin-bottom: 30px; color: #ccc; }
+  .menuButtons button, #mapSelectScreen button, #leaderboardScreen button {
+    width: 200px; min-height: 60px; font-size: 18px; display: block; margin: 15px auto; padding: 12px 10px;
+    background: #111; color: white; border: 2px solid #00ffff; border-radius: 8px; cursor: pointer;
+    transition: 0.3s; white-space: normal; text-align: center;
   }
+  .menuButtons button:hover, #mapSelectScreen button:hover, #leaderboardScreen button:hover { background: #00ffff; color: black; box-shadow: 0 0 15px #00ffff; transform: scale(1.05); }
+  .menuTitle { font-size: 32px; margin-bottom: 20px; text-shadow: 0 0 10px #ff00ff; }
 
-  .logo {
-    font-size: 60px;
-    color: white;
-    text-shadow:
-      0 0 5px #00ffff,
-      0 0 10px #00ffff,
-      0 0 20px #0088ff;
-  }
-
-  .tagline {
-    font-size: 18px;
-    margin-bottom: 30px;
-    color: #ccc;
-  }
-
-  .menuButtons button,
-  #mapSelectScreen button,
-  #leaderboardScreen button {
-    width: 200px; /* wide for text */
-    min-height: 60px;
-    font-size: 18px;
-    display: block;
-    margin: 15px auto;
-    padding: 12px 10px;
-    background: #111;
-    color: white;
-    border: 2px solid #00ffff;
-    border-radius: 8px;
-    cursor: pointer;
-    transition: 0.3s;
-    white-space: normal;
-    text-align: center;
-  }
-
-  .menuButtons button:hover,
-  #mapSelectScreen button:hover,
-  #leaderboardScreen button:hover {
-    background: #00ffff;
-    color: black;
-    box-shadow: 0 0 15px #00ffff;
-    transform: scale(1.05);
-  }
-
-  .menuTitle {
-    font-size: 32px;
-    margin-bottom: 20px;
-    text-shadow: 0 0 10px #ff00ff;
-  }
-
+  /* Alien notification */
+  #alienText { position: absolute; top: 10px; left: 50%; transform: translateX(-50%); background: #00ff00; color: black; padding: 8px 16px; border-radius: 6px; display: none; font-weight: bold; z-index: 15; }
 </style>
 </head>
 <body>
@@ -179,7 +91,7 @@
 <div id="mapSelectScreen" style="display:none;">
   <h2 class="menuTitle">SELECT MAP</h2>
   <button onclick="selectMap('classic')">Classic Arena<br><span id="classicHighScore">High Score: 0</span></button>
-  <button onclick="selectMap('maze')">Maze Mode<br><span id="mazeHighScore">High Score: 0</span></button>
+  <button onclick="selectMap('hard')">Hard Mode<br><span id="mazeHighScore">High Score: 0</span></button>
   <br>
   <button onclick="goHome()">BACK</button>
 </div>
@@ -188,11 +100,10 @@
 <div id="leaderboardScreen" style="display:none;">
   <h2 class="menuTitle">LEADERBOARD</h2>
   <p>Classic Arena: <span id="classicBoard">0</span></p>
-  <p>Maze Mode: <span id="mazeBoard">0</span></p>
+  <p>Hard Mode: <span id="mazeBoard">0</span></p>
   <button onclick="goHome()">BACK</button>
 </div>
 
-<!-- GAME HUD & AREA -->
 <div id="hud" style="display:none;">
   <div>Score: <span id="score">0</span></div>
   <div>Time: <span id="timer">0</span>s</div>
@@ -213,190 +124,173 @@
     <button onclick="restartGame()">Restart</button>
     <button onclick="goHome()">Exit</button>
   </div>
+  <div id="alienText">New Alien Appeared!</div>
 </div>
 
 <!-- TOUCH CONTROLS -->
 <div class="controls">
-  <div class="row">
-    <button id="up">↑</button>
-  </div>
-  <div class="row">
-    <button id="left">←</button>
-    <button id="down">↓</button>
-    <button id="right">→</button>
-  </div>
+  <div class="row"><button id="up">↑</button></div>
+  <div class="row"><button id="left">←</button><button id="down">↓</button><button id="right">→</button></div>
 </div>
 
 <script>
-  const pacman = document.getElementById("pacman");
-  const ghost = document.getElementById("ghost");
-  const gameOverText = document.getElementById("gameOver");
-  const pauseMenu = document.getElementById("pauseMenu");
-  const gameArea = document.getElementById("gameArea");
-  const scoreDisplay = document.getElementById("score");
-  const timerDisplay = document.getElementById("timer");
-  const controls = document.querySelector(".controls");
+const pacman = document.getElementById("pacman");
+const ghost = document.getElementById("ghost");
+const gameOverText = document.getElementById("gameOver");
+const pauseMenu = document.getElementById("pauseMenu");
+const gameArea = document.getElementById("gameArea");
+const scoreDisplay = document.getElementById("score");
+const timerDisplay = document.getElementById("timer");
+const controls = document.querySelector(".controls");
+const alienText = document.getElementById("alienText");
 
-  let pacmanPos = { x: 0, y: 0 };
-  let ghostPos = { x: 360, y: 360 };
-  let ghostInterval;
-  let timerInterval;
-  let pellet = null;
-  let ghostFrozen = false;
-  let score = 0;
-  let timeElapsed = 0;
-  let currentMap = "classic";
-  let paused = false;
+let pacmanPos = { x: 0, y: 0 };
+let ghostPos = { x: 360, y: 360 };
+let ghostInterval, timerInterval;
+let pellet = null;
+let ghostFrozen = false;
+let score = 0;
+let timeElapsed = 0;
+let currentMap = "classic";
+let paused = false;
+let aliens = []; // extra aliens
 
-  function updatePosition() {
-    pacman.style.transform = `translate(${pacmanPos.x}px, ${pacmanPos.y}px)`;
-    ghost.style.transform = `translate(${ghostPos.x}px, ${ghostPos.y}px)`;
+function updatePosition(){
+  pacman.style.transform = `translate(${pacmanPos.x}px,${pacmanPos.y}px)`;
+  ghost.style.transform = `translate(${ghostPos.x}px,${ghostPos.y}px)`;
+  aliens.forEach(a=>a.el.style.transform=`translate(${a.pos.x}px,${a.pos.y}px)`);
+}
+
+function movePacman(dir){
+  if(paused) return;
+  if(dir==="up" && pacmanPos.y>0) pacmanPos.y-=40;
+  if(dir==="down" && pacmanPos.y<360) pacmanPos.y+=40;
+  if(dir==="left" && pacmanPos.x>0) pacmanPos.x-=40;
+  if(dir==="right" && pacmanPos.x<360) pacmanPos.x+=40;
+  updatePosition(); checkCollision(); checkPelletPickup();
+}
+
+function moveGhostSmart(g){ // g can be ghost or alien
+  if(ghostFrozen || paused) return;
+  if(Math.random()<0.5){
+    if(g.pos.x<pacmanPos.x && g.pos.x<360) g.pos.x+=40;
+    else if(g.pos.x>pacmanPos.x && g.pos.x>0) g.pos.x-=40;
+  }else{
+    if(g.pos.y<pacmanPos.y && g.pos.y<360) g.pos.y+=40;
+    else if(g.pos.y>pacmanPos.y && g.pos.y>0) g.pos.y-=40;
   }
+  updatePosition(); checkCollision();
+}
 
-  function movePacman(dir){
-    if(paused) return;
-    if(dir==="up" && pacmanPos.y>0) pacmanPos.y-=40;
-    if(dir==="down" && pacmanPos.y<360) pacmanPos.y+=40;
-    if(dir==="left" && pacmanPos.x>0) pacmanPos.x-=40;
-    if(dir==="right" && pacmanPos.x<360) pacmanPos.x+=40;
-    updatePosition(); checkCollision(); checkPelletPickup();
+function checkCollision(){
+  if(pacmanPos.x===ghostPos.x && pacmanPos.y===ghostPos.y) endGame();
+  for(let a of aliens){
+    if(pacmanPos.x===a.pos.x && pacmanPos.y===a.pos.y) endGame();
   }
+}
 
-  function moveGhostSmart(){
-    if(ghostFrozen || paused) return;
-    if(Math.random()<0.5){
-      if(ghostPos.x<pacmanPos.x && ghostPos.x<360) ghostPos.x+=40;
-      else if(ghostPos.x>pacmanPos.x && ghostPos.x>0) ghostPos.x-=40;
-    }else{
-      if(ghostPos.y<pacmanPos.y && ghostPos.y<360) ghostPos.y+=40;
-      else if(ghostPos.y>pacmanPos.y && ghostPos.y>0) ghostPos.y-=40;
-    }
-    updatePosition(); checkCollision();
+function endGame(){
+  saveHighScore(); gameOverText.style.display="block";
+  clearInterval(ghostInterval); clearInterval(timerInterval);
+}
+
+function saveHighScore(){
+  const key = currentMap+"HighScore";
+  const best = localStorage.getItem(key)||0;
+  if(score>best) localStorage.setItem(key,score);
+}
+
+function updateHighScores(){
+  const classic = localStorage.getItem("classicHighScore")||0;
+  const hard = localStorage.getItem("mazeHighScore")||0;
+  document.getElementById("classicHighScore").innerText="High Score: "+classic;
+  document.getElementById("mazeHighScore").innerText="High Score: "+hard;
+  document.getElementById("classicBoard").innerText=classic;
+  document.getElementById("mazeBoard").innerText=hard;
+}
+
+function restartGame(){
+  paused=false; aliens.forEach(a=>a.el.remove()); aliens=[];
+  pacmanPos={x:0,y:0}; ghostPos={x:360,y:360};
+  score=0; timeElapsed=0; updateHUD(); updatePosition();
+  gameOverText.style.display="none"; pauseMenu.style.display="none";
+  spawnPellet(); clearInterval(ghostInterval); clearInterval(timerInterval);
+  ghostInterval=setInterval(()=>{
+    moveGhostSmart({pos:ghostPos});
+    aliens.forEach(a=>moveGhostSmart(a));
+    checkAlienSpawn();
+  },500);
+  timerInterval=setInterval(()=>{ if(!paused){timeElapsed++;updateHUD();} },1000);
+}
+
+function spawnPellet(){
+  if(pellet) pellet.remove();
+  const pelletEl=document.createElement("div"); pelletEl.className="pellet";
+  const posX=Math.floor(Math.random()*10)*40;
+  const posY=Math.floor(Math.random()*10)*40;
+  pelletEl.style.transform=`translate(${posX}px,${posY}px)`;
+  pelletEl.dataset.x=posX; pelletEl.dataset.y=posY;
+  gameArea.appendChild(pelletEl); pellet=pelletEl;
+}
+
+function checkPelletPickup(){
+  if(!pellet) return;
+  const px=parseInt(pellet.dataset.x); const py=parseInt(pellet.dataset.y);
+  if(pacmanPos.x===px && pacmanPos.y===py){
+    pellet.remove(); pellet=null; score+=10; updateHUD(); freezeGhost(); spawnPellet();
   }
+}
 
-  function checkCollision(){
-    if(pacmanPos.x===ghostPos.x && pacmanPos.y===ghostPos.y) endGame();
-  }
+function freezeGhost(){ ghostFrozen=true; setTimeout(()=>{ghostFrozen=false;},5000); }
 
-  function endGame(){
-    saveHighScore();
-    gameOverText.style.display="block";
-    clearInterval(ghostInterval); clearInterval(timerInterval);
-  }
+function updateHUD(){ scoreDisplay.textContent=score; timerDisplay.textContent=timeElapsed; }
 
-  function saveHighScore(){
-    const key = currentMap+"HighScore";
-    const best = localStorage.getItem(key)||0;
-    if(score>best) localStorage.setItem(key,score);
-  }
+function showMapSelect(){ document.getElementById("homeScreen").style.display="none"; document.getElementById("mapSelectScreen").style.display="block"; controls.style.display="none"; updateHighScores(); }
+function showLeaderboard(){ document.getElementById("homeScreen").style.display="none"; document.getElementById("leaderboardScreen").style.display="block"; controls.style.display="none"; updateHighScores(); }
+function goHome(){ paused=false; clearInterval(ghostInterval); clearInterval(timerInterval); document.getElementById("mapSelectScreen").style.display="none"; document.getElementById("leaderboardScreen").style.display="none"; document.getElementById("gameArea").style.display="none"; document.getElementById("hud").style.display="none"; controls.style.display="none"; document.getElementById("homeScreen").style.display="block"; }
 
-  function updateHighScores(){
-    const classic = localStorage.getItem("classicHighScore")||0;
-    const maze = localStorage.getItem("mazeHighScore")||0;
-    document.getElementById("classicHighScore").innerText="High Score: "+classic;
-    document.getElementById("mazeHighScore").innerText="High Score: "+maze;
-    document.getElementById("classicBoard").innerText=classic;
-    document.getElementById("mazeBoard").innerText=maze;
-  }
+function selectMap(map){
+  currentMap=map;
+  document.getElementById("mapSelectScreen").style.display="none";
+  document.getElementById("gameArea").style.display="block";
+  document.getElementById("hud").style.display="flex";
+  controls.style.display="flex";
+  restartGame();
+}
 
-  function restartGame(){
-    paused=false;
-    pacmanPos={x:0,y:0};
-    ghostPos={x:360,y:360};
-    score=0; timeElapsed=0;
-    updateHUD(); updatePosition();
-    gameOverText.style.display="none"; pauseMenu.style.display="none";
-    spawnPellet();
-    clearInterval(ghostInterval); clearInterval(timerInterval);
-    ghostInterval=setInterval(moveGhostSmart,500);
-    timerInterval=setInterval(()=>{ if(!paused) {timeElapsed++;updateHUD();}},1000);
-  }
+/* PAUSE FUNCTIONS */
+function pauseGame(){ paused=true; pauseMenu.style.display="block"; }
+function resumeGame(){ paused=false; pauseMenu.style.display="none"; }
 
-  function spawnPellet(){
-    if(pellet) pellet.remove();
-    const pelletEl=document.createElement("div");
-    pelletEl.className="pellet";
-    const posX=Math.floor(Math.random()*10)*40;
-    const posY=Math.floor(Math.random()*10)*40;
-    pelletEl.style.transform=`translate(${posX}px, ${posY}px)`;
-    pelletEl.dataset.x=posX; pelletEl.dataset.y=posY;
-    gameArea.appendChild(pelletEl); pellet=pelletEl;
-  }
+/* ALIEN SPAWN FOR HARD MODE */
+function checkAlienSpawn(){
+  if(currentMap!=="hard") return;
+  // First alien at 200
+  if(score>=200 && aliens.length===0) spawnAlien();
+  // Second alien at 1000
+  if(score>=1000 && aliens.length===1) spawnAlien();
+}
+function spawnAlien(){
+  const aEl=document.createElement("div"); aEl.className="alien"; gameArea.appendChild(aEl);
+  aliens.push({el:aEl, pos:{x:Math.floor(Math.random()*10)*40, y:Math.floor(Math.random()*10)*40}});
+  alienText.style.display="block";
+  setTimeout(()=>{alienText.style.display="none";},2000);
+}
 
-  function checkPelletPickup(){
-    if(!pellet) return;
-    const px=parseInt(pellet.dataset.x);
-    const py=parseInt(pellet.dataset.y);
-    if(pacmanPos.x===px && pacmanPos.y===py){
-      pellet.remove(); pellet=null; score+=10; updateHUD(); freezeGhost(); spawnPellet();
-    }
-  }
+/* TOUCH CONTROLS */
+document.getElementById("up").addEventListener("click",()=>movePacman("up"));
+document.getElementById("down").addEventListener("click",()=>movePacman("down"));
+document.getElementById("left").addEventListener("click",()=>movePacman("left"));
+document.getElementById("right").addEventListener("click",()=>movePacman("right"));
 
-  function freezeGhost(){ ghostFrozen=true; setTimeout(()=>{ghostFrozen=false;},5000); }
-
-  function updateHUD(){
-    scoreDisplay.textContent=score; timerDisplay.textContent=timeElapsed;
-  }
-
-  function showMapSelect(){ 
-    document.getElementById("homeScreen").style.display="none";
-    document.getElementById("mapSelectScreen").style.display="block";
-    controls.style.display="none";
-    updateHighScores();
-  }
-
-  function showLeaderboard(){
-    document.getElementById("homeScreen").style.display="none";
-    document.getElementById("leaderboardScreen").style.display="block";
-    controls.style.display="none";
-    updateHighScores();
-  }
-
-  function goHome(){
-    paused=false;
-    clearInterval(ghostInterval); clearInterval(timerInterval);
-    document.getElementById("mapSelectScreen").style.display="none";
-    document.getElementById("leaderboardScreen").style.display="none";
-    document.getElementById("gameArea").style.display="none";
-    document.getElementById("hud").style.display="none";
-    controls.style.display="none";
-    document.getElementById("homeScreen").style.display="block";
-  }
-
-  function selectMap(map){
-    currentMap=map;
-    document.getElementById("mapSelectScreen").style.display="none";
-    document.getElementById("gameArea").style.display="block";
-    document.getElementById("hud").style.display="flex";
-    controls.style.display="flex";
-    restartGame();
-  }
-
-  /* PAUSE FUNCTIONS */
-  function pauseGame(){
-    paused=true;
-    pauseMenu.style.display="block";
-  }
-  function resumeGame(){
-    paused=false;
-    pauseMenu.style.display="none";
-  }
-
-  // TOUCH CONTROLS
-  document.getElementById("up").addEventListener("click",()=>movePacman("up"));
-  document.getElementById("down").addEventListener("click",()=>movePacman("down"));
-  document.getElementById("left").addEventListener("click",()=>movePacman("left"));
-  document.getElementById("right").addEventListener("click",()=>movePacman("right"));
-
-  // KEYBOARD CONTROLS
-  document.addEventListener("keydown",(e)=>{
-    if(e.key==="ArrowUp") movePacman("up");
-    if(e.key==="ArrowDown") movePacman("down");
-    if(e.key==="ArrowLeft") movePacman("left");
-    if(e.key==="ArrowRight") movePacman("right");
-    if(e.key==="Escape") pauseGame(); // ESC to pause
-  });
-
+/* KEYBOARD CONTROLS */
+document.addEventListener("keydown",(e)=>{
+  if(e.key==="ArrowUp") movePacman("up");
+  if(e.key==="ArrowDown") movePacman("down");
+  if(e.key==="ArrowLeft") movePacman("left");
+  if(e.key==="ArrowRight") movePacman("right");
+  if(e.key==="Escape") pauseGame();
+});
 </script>
 </body>
 </html>
