--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<meta name="viewport" content="width=device-width, initial-scale=1.0""")/>>
 <title>Pac-Boi</title>
 <style>
   body {
@@ -20,7 +20,6 @@
     gap: 30px;
     margin-top: 10px;
     font-size: 18px;
-    align-items: center;
   }
 
   #gameArea {
@@ -40,11 +39,11 @@
     transition: transform 0.2s;
   }
 
-  #pacman { background-color: yellow; border-radius: 50%; z-index: 3; }
+  #pacman { background-color: yellow; border-radius: 50%; z-index: 2; }
   #ghost { background-color: red; border-radius: 50%; z-index: 2; }
   .pellet { background-color: white; border-radius: 50%; z-index: 1; }
   
-  /* Pulse Animation for Aliens */
+  /* Alien pulse animation */
   @keyframes pulse {
     0% { transform: scale(1); }
     50% { transform: scale(1.15); box-shadow: 0 0 15px #00ff00; }
@@ -54,36 +53,46 @@
 
   .controls { display: flex; flex-direction: column; align-items: center; margin-top: 15px; }
   .row { display: flex; justify-content: center; }
-  .controls button { width: 60px; height: 60px; font-size: 24px; background: #333; color: white; border: none; border-radius: 10px; cursor: pointer; margin: 2px; }
+  .controls button { width: 60px; height: 60px; font-size: 24px; background: #333; color: white; border: none; border-radius: 10px; cursor: pointer; }
 
   #gameOver, #pauseMenu, #customPopup {
     position: absolute; top: 50%; left: 50%;
     transform: translate(-50%, -50%);
-    background-color: rgba(0,0,0,0.9);
-    padding: 20px; border-radius: 10px;
-    display: none; z-index: 100; text-align: center;
+    background-color: rgba(0,0,0,0.85);
+    color: red; font-size: 24px; text-align: center;
+    padding: 20px; border: 2px solid red; border-radius: 10px;
+    display: none; z-index: 100;
   }
   
-  #gameOver, #pauseMenu { color: red; font-size: 24px; border: 2px solid red; }
-  #customPopup { border: 2px solid #00ffff; width: 220px; }
+  /* Themed Customization Popup */
+  #customPopup { border-color: #00ffff; color: white; width: 250px; }
   
-  button.menu-btn {
-    margin-top: 10px; background: #444; color: white; font-size: 16px;
-    padding: 10px 20px; border: none; border-radius: 5px; cursor: pointer; width: 100%;
+  #gameOver button, #pauseMenu button, .popup-btn {
+    margin-top: 10px; background: red; color: white; font-size: 18px;
+    padding: 10px 20px; border: none; border-radius: 5px; cursor: pointer;
   }
+  .popup-btn { background: #00ffff; color: black; width: 100%; font-weight: bold; }
 
-  #homeScreen, #mapSelectScreen, #leaderboardScreen { text-align: center; margin-top: 50px; }
-  .logo { font-size: 60px; color: white; text-shadow:0 0 5px #00ffff,0 0 10px #00ffff,0 0 20px #0088ff; margin-bottom: 5px; }
+  #homeScreen, #mapSelectScreen, #leaderboardScreen { text-align: center; margin-top: 80px; }
+  .logo { font-size: 60px; color: white; text-shadow:0 0 5px #00ffff,0 0 10px #00ffff,0 0 20px #0088ff; }
   .tagline { font-size: 18px; margin-bottom: 30px; color: #ccc; }
   
+  /* Neon Button Styling from your image */
   .menuButtons button, #mapSelectScreen button, #leaderboardScreen button {
-    width: 220px; min-height: 50px; font-size: 18px; display: block; margin: 10px auto; padding: 10px;
-    background: #111; color: white; border: 2px solid #00ffff; border-radius: 8px; cursor: pointer;
-    transition: 0.3s;
+    width: 250px; min-height: 60px; font-size: 18px; display: block; margin: 15px auto; padding: 12px 10px;
+    background: transparent; color: white; border: 2px solid #00ffff; border-radius: 8px; cursor: pointer;
+    transition: 0.3s; white-space: normal; text-align: center;
+    text-transform: uppercase; letter-spacing: 1px;
   }
-  .menuButtons button:hover, #mapSelectScreen button:hover, #leaderboardScreen button:hover { background: #00ffff; color: black; box-shadow: 0 0 15px #00ffff; transform: scale(1.05); }
+  .menuButtons button:hover, #mapSelectScreen button:hover, #leaderboardScreen button:hover { 
+    background: rgba(0, 255, 255, 0.1); 
+    box-shadow: 0 0 15px #00ffff; 
+    transform: scale(1.05); 
+  }
+  
+  .menuTitle { font-size: 32px; margin-bottom: 20px; text-shadow: 0 0 10px #ff00ff; }
+  .theme-option { display: flex; justify-content: space-between; align-items: center; margin: 15px 0; font-size: 18px; }
 
-  .theme-option { display: flex; justify-content: space-between; margin: 10px 0; align-items: center; color: white; }
   /* Alien notification */
   #alienText { position: absolute; top: 10px; left: 50%; transform: translateX(-50%); background: #00ff00; color: black; padding: 8px 16px; border-radius: 6px; display: none; font-weight: bold; z-index: 15; }
 </style>
@@ -97,14 +106,17 @@
   <div class="menuButtons">
     <button onclick="showMapSelect()">PLAY</button>
     <button onclick="showLeaderboard()">LEADERBOARD</button>
+    <!-- CUSTOMIZE BUTTON ADDED UNDER LEADERBOARD -->
+    <button onclick="openCustomization()" style="border-color: #ff00ff;">CUSTOMIZE</button>
   </div>
 </div>
 
 <!-- MAP SELECT SCREEN -->
 <div id="mapSelectScreen" style="display:none;">
   <h2 class="menuTitle">SELECT MAP</h2>
-  <button onclick="selectMap('classic')">Classic Arena<br><small id="classicHighScore">High Score: 0</small></button>
-  <button onclick="selectMap('hard')">Hard Mode<br><small id="mazeHighScore">High Score: 0</small></button>
+  <button onclick="selectMap('classic')">Classic Arena<br><span id="classicHighScore">High Score: 0</span></button>
+  <button onclick="selectMap('hard')">Hard Mode<br><span id="mazeHighScore">High Score: 0</span></button>
+  <br>
   <button onclick="goHome()">BACK</button>
 </div>
 
@@ -113,42 +125,40 @@
   <h2 class="menuTitle">LEADERBOARD</h2>
   <p>Classic Arena: <span id="classicBoard">0</span></p>
   <p>Hard Mode: <span id="mazeBoard">0</span></p>
-  <button onclick="openCustomization()" style="border-color: #ff00ff;">CUSTOMIZE</button>
   <button onclick="goHome()">BACK</button>
 </div>
 
 <div id="hud" style="display:none;">
   <div>Score: <span id="score">0</span></div>
   <div>Time: <span id="timer">0</span>s</div>
-  <button onclick="pauseGame()" style="background:#444; color:white; border:none; padding:5px 10px; border-radius:5px;">PAUSE</button>
+  <button onclick="pauseGame()">PAUSE</button>
 </div>
 
 <div id="gameArea" style="display:none;">
   <div id="pacman"></div>
   <div id="ghost"></div>
-  <div id="alienText">New Alien Appeared!</div>
-  
   <div id="gameOver">
     Game Over!<br/>
-    <button class="menu-btn" style="background:red;" onclick="restartGame()">Restart</button>
-    <button class="menu-btn" style="background:red;" onclick="goHome()">Exit</button>
+    <button onclick="restartGame()">Restart</button>
+    <button onclick="goHome()">Exit</button>
+  </div>
+  <div id="pauseMenu">
+    <h2 style="color:white;">Paused</h2>
+    <button onclick="resumeGame()">Resume</button>
+    <button onclick="restartGame()">Restart</button>
+    <button onclick="goHome()">Exit</button>
   </div>
   
-  <div id="pauseMenu">
-    <h2 style="color:white; margin-top:0;">Paused</h2>
-    <button class="menu-btn" onclick="resumeGame()">Resume</button>
-    <button class="menu-btn" onclick="restartGame()">Restart</button>
-    <button class="menu-btn" onclick="goHome()">Exit</button>
-  </div>
-
   <!-- CUSTOMIZATION POPUP -->
   <div id="customPopup">
-    <h3 style="color:#00ffff; margin-top:0;">Theme Colors</h3>
-    <div class="theme-option">Pac-Boi: <input type="color" id="pacColor" value="#ffff00" onchange="applyColors()"></div>
-    <div class="theme-option">Ghost: <input type="color" id="ghostColor" value="#ff0000" onchange="applyColors()"></div>
-    <div class="theme-option">Arena: <input type="color" id="borderColor" value="#ffffff" onchange="applyColors()"></div>
-    <button class="menu-btn" onclick="closeCustomization()">Save & Close</button>
+    <h3 style="margin-top:0; color:#00ffff;">THEME LAB</h3>
+    <div class="theme-option">PAC-BOI <input type="color" id="pacColor" value="#ffff00" onchange="applyColors()"></div>
+    <div class="theme-option">GHOST <input type="color" id="ghostColor" value="#ff0000" onchange="applyColors()"></div>
+    <div class="theme-option">ARENA <input type="color" id="borderColor" value="#ffffff" onchange="applyColors()"></div>
+    <button class="popup-btn" onclick="closeCustomization()">SAVE & CLOSE</button>
   </div>
+  
+  <div id="alienText">New Alien Appeared!</div>
 </div>
 
 <!-- TOUCH CONTROLS -->
@@ -187,7 +197,7 @@ function updatePosition(){
 }
 
 function movePacman(dir){
-  if(paused || gameOverText.style.display === "block") return;
+  if(paused) return;
   if(dir==="up" && pacmanPos.y>0) pacmanPos.y-=40;
   if(dir==="down" && pacmanPos.y<360) pacmanPos.y+=40;
   if(dir==="left" && pacmanPos.x>0) pacmanPos.x-=40;
@@ -215,10 +225,37 @@ function checkCollision(){
 }
 
 function endGame(){
-  saveHighScore(); 
-  gameOverText.style.display="block";
-  clearInterval(ghostInterval); 
-  clearInterval(timerInterval);
+  saveHighScore(); gameOverText.style.display="block";
+  clearInterval(ghostInterval); clearInterval(timerInterval);
+}
+
+function saveHighScore(){
+  const key = currentMap+"HighScore";
+  const best = localStorage.getItem(key)||0;
+  if(score>best) localStorage.setItem(key,score);
+}
+
+function updateHighScores(){
+  const classic = localStorage.getItem("classicHighScore")||0;
+  const hard = localStorage.getItem("mazeHighScore")||0;
+  document.getElementById("classicHighScore").innerText="High Score: "+classic;
+  document.getElementById("mazeHighScore").innerText="High Score: "+hard;
+  document.getElementById("classicBoard").innerText=classic;
+  document.getElementById("mazeBoard").innerText=hard;
+}
+
+function restartGame(){
+  paused=false; aliens.forEach(a=>a.el.remove()); aliens=[];
+  pacmanPos={x:0,y:0}; ghostPos={x:360,y:360};
+  score=0; timeElapsed=0; updateHUD(); updatePosition();
+  gameOverText.style.display="none"; pauseMenu.style.display="none";
+  spawnPellet(); clearInterval(ghostInterval); clearInterval(timerInterval);
+  ghostInterval=setInterval(()=>{
+    moveGhostSmart({pos:ghostPos});
+    aliens.forEach(a=>moveGhostSmart(a));
+    checkAlienSpawn();
+  },500);
+  timerInterval=setInterval(()=>{ if(!paused){timeElapsed++;updateHUD();} },1000);
 }
 
 function spawnPellet(){
@@ -241,60 +278,36 @@ function checkPelletPickup(){
 
 function freezeGhost(){ ghostFrozen=true; setTimeout(()=>{ghostFrozen=false;},5000); }
 
-/* ALIEN SPAWN FOR HARD MODE */
-function spawnAlien(){
-  let safeX, safeY, attempts = 0;
-  // Safety check: Don't spawn on top of Pac-Boi
-  do {
-    safeX = Math.floor(Math.random()*10)*40;
-    safeY = Math.floor(Math.random()*10)*40;
-    attempts++;
-  } while (Math.abs(safeX - pacmanPos.x) < 80 && Math.abs(safeY - pacmanPos.y) < 80 && attempts < 50);
-
-  const aEl=document.createElement("div"); aEl.className="alien"; gameArea.appendChild(aEl);
-  aliens.push({el:aEl, pos:{x:safeX, y:safeY}});
-  alienText.style.display="block";
-  setTimeout(()=>{alienText.style.display="none";},2000);
-}
-
-function checkAlienSpawn(){
-  if(currentMap!=="hard") return;
-  // First alien at 200
-  if(score>=200 && aliens.length===0) spawnAlien();
-  // Second alien at 1000
-  if(score>=1000 && aliens.length===1) spawnAlien();
-}
-
-function restartGame(){
-  paused=false; 
-  aliens.forEach(a=>a.el.remove()); 
-  aliens=[];
-  pacmanPos={x:0,y:0}; ghostPos={x:360,y:360};
-  score=0; timeElapsed=0; updateHUD(); updatePosition();
-  gameOverText.style.display="none"; pauseMenu.style.display="none";
-  spawnPellet(); 
-  clearInterval(ghostInterval); clearInterval(timerInterval);
-  ghostInterval=setInterval(()=>{
-    moveGhostSmart({pos:ghostPos});
-    aliens.forEach(a=>moveGhostSmart(a));
-    checkAlienSpawn();
-  },500);
-  timerInterval=setInterval(()=>{ if(!paused){timeElapsed++;updateHUD();} },1000);
-}
-
-/* UI & SCREEN FUNCTIONS */
-function showMapSelect(){ document.getElementById("homeScreen").style.display="none"; document.getElementById("mapSelectScreen").style.display="block"; updateHighScores(); }
-function showLeaderboard(){ document.getElementById("homeScreen").style.display="none"; document.getElementById("leaderboardScreen").style.display="block"; updateHighScores(); }
-function goHome(){ paused=false; clearInterval(ghostInterval); clearInterval(timerInterval); document.getElementById("mapSelectScreen").style.display="none"; document.getElementById("leaderboardScreen").style.display="none"; document.getElementById("gameArea").style.display="none"; document.getElementById("hud").style.display="none"; controls.style.display="none"; document.getElementById("homeScreen").style.display="block"; }
-function selectMap(map){ currentMap=map; document.getElementById("mapSelectScreen").style.display="none"; document.getElementById("gameArea").style.display="block"; document.getElementById("hud").style.display="flex"; controls.style.display="flex"; restartGame(); }
-function pauseGame(){ paused=true; pauseMenu.style.display="block"; }
-function resumeGame(){ paused=false; pauseMenu.style.display="none"; }
 function updateHUD(){ scoreDisplay.textContent=score; timerDisplay.textContent=timeElapsed; }
 
-/* CUSTOMIZATION & THEMES */
-function openCustomization(){ customPopup.style.display="block"; }
-function closeCustomization(){ customPopup.style.display="none"; }
-function applyColors(){
+/* SCREEN CONTROLS */
+function showMapSelect(){ document.getElementById("homeScreen").style.display="none"; document.getElementById("mapSelectScreen").style.display="block"; controls.style.display="none"; updateHighScores(); }
+function showLeaderboard(){ document.getElementById("homeScreen").style.display="none"; document.getElementById("leaderboardScreen").style.display="block"; controls.style.display="none"; updateHighScores(); }
+function goHome(){ paused=false; clearInterval(ghostInterval); clearInterval(timerInterval); document.getElementById("mapSelectScreen").style.display="none"; document.getElementById("leaderboardScreen").style.display="none"; document.getElementById("gameArea").style.display="none"; document.getElementById("hud").style.display="none"; controls.style.display="none"; document.getElementById("homeScreen").style.display="block"; }
+
+function selectMap(map){
+  currentMap=map;
+  document.getElementById("mapSelectScreen").style.display="none";
+  document.getElementById("gameArea").style.display="block";
+  document.getElementById("hud").style.display="flex";
+  controls.style.display="flex";
+  restartGame();
+}
+
+function pauseGame(){ paused=true; pauseMenu.style.display="block"; }
+function resumeGame(){ paused=false; pauseMenu.style.display="none"; }
+
+/* CUSTOMIZATION LOGIC */
+function openCustomization() { 
+  document.getElementById("gameArea").style.display = "block"; // Show arena bg for preview
+  customPopup.style.display = "block"; 
+}
+function closeCustomization() { 
+  customPopup.style.display = "none"; 
+  document.getElementById("gameArea").style.display = "none";
+}
+
+function applyColors() {
   const pCol = document.getElementById("pacColor").value;
   const gCol = document.getElementById("ghostColor").value;
   const bCol = document.getElementById("borderColor").value;
@@ -303,7 +316,6 @@ function applyColors(){
   ghost.style.backgroundColor = gCol;
   gameArea.style.borderColor = bCol;
   
-  // Save choices
   localStorage.setItem("pacTheme", pCol);
   localStorage.setItem("ghostTheme", gCol);
   localStorage.setItem("borderTheme", bCol);
@@ -318,27 +330,32 @@ function loadTheme(){
   }
 }
 
-/* DATA & LOCAL STORAGE */
-function saveHighScore(){
-  const key = currentMap==="classic" ? "classicHighScore" : "mazeHighScore";
-  if(score > (localStorage.getItem(key)||0)) localStorage.setItem(key, score);
+/* ALIEN SPAWN FOR HARD MODE */
+function checkAlienSpawn(){
+  if(currentMap!=="hard") return;
+  if(score>=200 && aliens.length===0) spawnAlien();
+  if(score>=1000 && aliens.length===1) spawnAlien();
 }
-function updateHighScores(){
-  const c = localStorage.getItem("classicHighScore")||0;
-  const h = localStorage.getItem("mazeHighScore")||0;
-  document.getElementById("classicHighScore").innerText="High Score: "+c;
-  document.getElementById("mazeHighScore").innerText="High Score: "+h;
-  document.getElementById("classicBoard").innerText=c;
-  document.getElementById("mazeBoard").innerText=h;
+function spawnAlien(){
+  let safeX, safeY, attempts = 0;
+  do {
+    safeX = Math.floor(Math.random()*10)*40;
+    safeY = Math.floor(Math.random()*10)*40;
+    attempts++;
+  } while (Math.abs(safeX - pacmanPos.x) < 80 && Math.abs(safeY - pacmanPos.y) < 80 && attempts < 50);
+
+  const aEl=document.createElement("div"); aEl.className="alien"; gameArea.appendChild(aEl);
+  aliens.push({el:aEl, pos:{x:safeX, y:safeY}});
+  alienText.style.display="block";
+  setTimeout(()=>{alienText.style.display="none";},2000);
 }
 
-/* TOUCH CONTROLS */
+/* INPUTS */
 document.getElementById("up").addEventListener("click",()=>movePacman("up"));
 document.getElementById("down").addEventListener("click",()=>movePacman("down"));
 document.getElementById("left").addEventListener("click",()=>movePacman("left"));
 document.getElementById("right").addEventListener("click",()=>movePacman("right"));
 
-/* KEYBOARD CONTROLS */
 document.addEventListener("keydown",(e)=>{
   if(e.key==="ArrowUp") movePacman("up");
   if(e.key==="ArrowDown") movePacman("down");
